Fixed bug with show more height
The max height was causing it to cut off text at the end.

--- a/components/design_system/ShowMore/ShowMore.module.css
+++ b/components/design_system/ShowMore/ShowMore.module.css
@@ -7,7 +7,7 @@
 
 .textContainerShow {
   composes: textContainer;
-  max-height: 2000px;
+  max-height: none;
 }
 
 .textContainer::before {
